# AgentRunbooks

./: .env.example  .gitignore  Makefile  README.md
adapters/: __init__.py  base.py  types.py
adapters/github/: __init__.py  adapter.py  mock.py  schemas.py
adapters/jira/: __init__.py  adapter.py  mock.py  schemas.py
adapters/k8s/: adapter.py  auth.py  mock.py  runtime_checks.py  schemas.py
demo/: demo-script.md  run-demo.sh
evals/: README.md  harness.py  report_generator.py
gateway/: Dockerfile  alembic.ini  pyproject.toml
gateway/alembic/: env.py
gateway/alembic/versions/: 0002_add_steps_table.py  0003_add_approvals_table.py  0004_add_eval_results.py  0005_add_security_tables.py  0006_add_canary.py  0007_add_incident_links.py  0008_add_feature_flags.py  0009_add_oidc.py  0010_add_tenancy_rbac.py  0011_add_scim.py
gateway/app/: audit.py  auth_oidc.py  db.py  feature_flags.py  incidents.py  logging_utils.py  main.py  middleware.py  models.py  otel.py  policy_engine.py  policy_guard.py  rbac.py  schemas.py  scim_utils.py  security.py  sessions.py  slo.py  tenancy.py
gateway/app/agents/: __init__.py  brain.py  provider.py  schemas.py  settings.py  stubs.py
gateway/app/agents/prompts/: planner.md  reviewer.md  toolcaller.md
gateway/app/billing/: __init__.py  metering.py  quotas.py  routers.py  stripe_integ.py
gateway/app/routers/: analytics.py  approvals.py  audit.py  canary.py  evals.py  feature_flags.py  health.py  oidc.py  policies.py  projects.py  runbooks.py  runs.py  scim.py  settings.py  slo.py  tenant_export.py  tenants.py  tools.py
gateway/app/schemas_json/: policy.schema.json
gateway/app/tool_schemas/: github.create_issue.schema.json  github.revert_pr.schema.json  github.rollback_release.schema.json  jira.comment_issue.schema.json  jira.create_issue.schema.json  jira.transition_issue.schema.json  k8s.drain_node.schema.json  k8s.restart_deployment.schema.json  k8s.uncordon_node.schema.json  pagerduty.ack.schema.json
gateway/tests/: test_agents.py  test_oidc.py  test_policy_engine.py  test_routes.py  test_runs.py  test_security.py
gateway/tests/adapters/: test_feature_flags.py  test_github.py
ops/: docker-compose.yml  otel-collector.yaml  prometheus.yml  tempo.yaml
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: __init__.py  activities.py  settings.py  utils.py  worker.py  workflows.py
scripts/: validate-runbook.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
(+98 files in other folders)
