[project]
name = "opsgenie-orchestrator"
version = "0.1.0"
description = "Temporal worker for OpsGenie-for-Agents"
authors = [{ name = "OpsGenie-for-Agents" }]
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7",
    "opentelemetry-api>=1.26,<2.0",
    "opentelemetry-sdk>=1.26,<2.0",
    "opentelemetry-exporter-otlp>=1.26,<2.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "structlog>=24.0",
    "jsonschema>=4.21,<5.0",
    "prometheus-client>=0.20,<1.0",
    "openai>=1.0,<2.0",
    "anthropic>=0.25,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

